# trazer-bot

./: Cargo.toml
src/: main.rs
src/contexts/: connections.rs  mod.rs
src/dialogue/: mod.rs
src/dialogue/states/: mod.rs  receive_dni.rs  receive_email.rs  receive_full_name.rs  receive_phone.rs  start.rs
src/jobs/: redis_interface.rs
